--- a/Web.config
+++ b/Web.config
@@ -13,4 +13,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
+<appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
